Routing Test Changes uploaded

--- a/src/DropdownMenu.css
+++ b/src/DropdownMenu.css
@@ -1,9 +1,7 @@
 .Dropdown {
   text-align: center;
-  width: 50px;
 }
 .Dropdown-header {
-  width: 50px;
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -12,4 +10,8 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+#dropdown-basic-button {
+  width: 50px;
 }
